--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
-VITE_API_URL=http://localhost:3000
+DATABASE_URL=postgresql://postgres.cokjoqhtgsmgwgatfqwq:Abcd1234%40@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?pgbouncer=true
+DIRECT_URL=postgresql://postgres.cokjoqhtgsmgwgatfqwq:Abcd1234%40@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres
+
+
+
+PORT=3000
+NODE_ENV=development
+
+JWT_ACCESS_SECRET="change_me_access_32chars_min"
+JWT_REFRESH_SECRET="change_me_refresh_32chars_min"
+JWT_ACCESS_EXPIRES="15m"
+JWT_REFRESH_EXPIRES_DAYS=30
+
+
+CORS_ORIGINS=http://localhost:5173,http://localhost:3000
